<resources>
    <string name="app_name">OSRSCritic</string>
    <string name="text_logo_critic">Critic</string>
    <string name="other_email_txt">Other Email</string>
    <string name="et_email_hint">Email</string>
    <string name="et_password_hint">Password</string>
    <string name="registerinfo_tv">Don\'t have an account? register here</string>
    <string name="other_email_login_btn">Log In</string>
    <string name="profile_details_title">Profile Details</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="osrs_account_name">OSRS Account Name</string>
    <string name="account_name_guidance">If your Runescape name has any spaces please use an _ i.e. Mr_Freaker</string>
    <string name="submit_registration">Submit</string>
    <string name="account_title">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="skill_type">Skill : </string>
    <string name="xp">XP: </string>
    <string name="rank_s">Rank: </string>
    <string name="level">Level: </string>
    <string name="account_name_s">Account Name: </string>
    <string name="combat_level_s">Combat Level: </string>
    <string name="posts">Posts</string>
</resources>