<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileDetailsActivity"
    android:background="@color/osrs_bg"
    >

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/profile_details_title"
        android:textColor="@color/osrs_logo_font_color"
        android:textSize="30sp"
        />


    <EditText
        android:id="@+id/tv_first_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/first_name"
        />

    <EditText
        android:id="@+id/tv_second_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_first_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/second_name"
        />

    <EditText
        android:id="@+id/tv_osrs_acc_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_second_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="16dp"
        android:hint="@string/osrs_account_name"
        />

    <TextView
        android:id="@+id/account_info"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/account_name_guidance"
        app:layout_constraintTop_toBottomOf="@id/tv_second_name"
        app:layout_constraintLeft_toRightOf="@id/tv_osrs_acc_name"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/osrs_logo_color"
        />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_osrs_acc_name"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/upload_avatar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_osrs_acc_name"
        app:layout_constraintLeft_toRightOf="@id/iv_avatar"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:text="Upload Image"
        android:textColor="@color/black"
        android:backgroundTint="@color/osrs_logo_font_color"
        />

    <Button
        android:id="@+id/done_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/submit_registration"

        />



</androidx.constraintlayout.widget.ConstraintLayout>