<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/osrs_bg"
    tools:context=".OtherEmailActivity">

    <EditText
        android:id="@+id/emaill_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/osrs_logo_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/et_email_hint"
        android:gravity="center"
        android:textColor="@color/osrs_logo_font_color"
        android:textColorHint="@color/osrs_logo_font_color"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/emaill_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/osrs_logo_color"
        android:hint="@string/et_password_hint"
        android:gravity="center"
        android:textColor="@color/osrs_logo_font_color"
        android:textColorHint="@color/osrs_logo_font_color"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@id/password_edit_text"
        app:layout_constraintEnd_toEndOf="@id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        android:layout_margin="20dp"
        android:text="@string/registerinfo_tv"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/osrs_logo_font_color"
        android:focusable="true" />

    <Button
        android:id="@+id/other_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="40dp"
        android:backgroundTint="@color/osrs_logo_color"
        android:text="@string/other_email_login_btn"

        />

</androidx.constraintlayout.widget.ConstraintLayout>